fix image container not responsive

--- a/src/UserProfile/style.css
+++ b/src/UserProfile/style.css
@@ -432,7 +432,8 @@
 
 .thread-images-container{
     width: 100%;
-    height: 330px;
+    height: max-content;
+    max-height: 330px;
     overflow: auto;
     white-space: nowrap;
 }
